# adventofcode-2021

./: Cargo.toml  README.md
day01/: Cargo.toml
day01/src/: lib.rs  main.rs
day02/: Cargo.toml
day02/src/: lib.rs  main.rs
day03/src/: lib.rs  main.rs
day04/src/: lib.rs  main.rs  two_phase.rs
day05/: Cargo.toml
day05/src/: lib.rs  main.rs
day06/: Cargo.toml
day06/src/: lib.rs  main.rs
day07/: Cargo.toml
day07/src/: lib.rs  main.rs
day08/src/: lib.rs  main.rs
day09/: Cargo.toml
day09/src/: lib.rs  main.rs
day10/: Cargo.toml
day10/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs
day12/: Cargo.toml
day12/src/: lib.rs  main.rs
day13/: Cargo.toml
day13/src/: lib.rs  main.rs
day14/: Cargo.toml
day14/src/: lib.rs  main.rs
day15/: Cargo.toml
day15/src/: lib.rs  main.rs
day16/: Cargo.toml
day16/src/: bits.rs  lib.rs  main.rs
day17/: Cargo.toml
day17/src/: lib.rs  main.rs
day18/: Cargo.toml
day18/src/: lib.rs  list_impl.rs  main.rs  parser.lalrpop
day19/: Cargo.toml
day19/src/: lib.rs  main.rs
