[package]
name = "day16"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
bitreader = "0.3.4"
color-eyre = "0.5.10"
hex = "0.4.3"
num_enum = "0.5.4"
structopt = "0.3.21"
thiserror = "1.0.22"
