[package]
name = "day18"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2021"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.10"
itertools = "0.10.3"
lalrpop-util = "0.19.6"
regex = "1.5.5"
structopt = "0.3.21"
thiserror = "1.0.22"

[build-dependencies]
lalrpop = "0.19.6"

[dev-dependencies]
rstest = "0.10.0"

[features]
default = ["list_impl"]
list_impl = []
